--- a/Feedback.html
+++ b/Feedback.html
@@ -11,12 +11,16 @@
 <body>
 <div class="container">
   <div class="alert alert-primary">
-    <strong>FeedBack</strong> 
+    <strong>FeedBack Form</strong> 
   </div>
   <form action="/action_page.php">
     <div class="form-group">
-      <label for="Name">Name</label>
+      <label for="Name">Name:</label>
       <input type="Name" class="form-control" id="name" placeholder="Enter Full Name" name="Name">
+    </div>
+    <div class="form-group">
+      <label for="Add">Address:</label>
+      <input type="add" class="form-control" id="add" placeholder="Enter Address" name="email">
     </div>
     <div class="form-group">
       <label for="email">Email:</label>
